Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-26566

galera.galera_var_cluster_address MTR failed: InnoDB: Assertion failure in file row0ins.cc line 3206

    XMLWordPrintable

Details

    Description

      stdio.log

      10.7.0 42ad4fa34644115fd4b8fda72e36359d99f264c9

      galera.galera_var_cluster_address 'innodb' w2 [ fail ]
              Test ended at 2021-09-07 13:24:11
       
      CURRENT_TEST: galera.galera_var_cluster_address
      [..]
      2021-09-07 13:23:24 145 [Note] WSREP: Recovered cluster id 935c483f-0fdd-11ec-93fe-ba692e4227a0
      2021-09-07 13:23:24 145 [ERROR] WSREP: Record locking is disabled in this thread, but the table being modified is not `mysql/wsrep_streaming_log`: `mysql/innodb_table_stats`.
      2021-09-07 13:23:24 0x7fb42ec67700  InnoDB: Assertion failure in file /home/buildbot/buildbot/padding_for_CPACK_RPM_BUILD_SOURCE_DIRS_PREFIX/mariadb-10.7.0/storage/innobase/row/row0ins.cc line 3206
      InnoDB: We intentionally generate a memory trap.
      

      error log

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 3d
                3d
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 6h 20m Time Not Required
                6h 20m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.